--- a/compito-d2/articolo.html
+++ b/compito-d2/articolo.html
@@ -242,8 +242,8 @@
       <div id="social" class="icon">
         <a
           href="https://www.facebook.com/101760941759223/posts/vuoi-far-parte-del-nostro-club-di-talenti-e-diventare-in-soli-3-mesi-la-figura-c/148125187122798/"
-          ><i class="fal fa-plus-square"></i
-        ></a>
+          ><i class="fab fa-facebook-f"></i>
+        </a>
       </div>
       <div id="calendar" class="icon">
         <a href="https://www.calendario-365.it/calendario-2023.html"
