--- a/compito-d2/articolo.html
+++ b/compito-d2/articolo.html
@@ -241,17 +241,20 @@
     <div class="container-icon">
       <div id="social" class="icon">
         <a
+          target="_blank"
           href="https://www.facebook.com/101760941759223/posts/vuoi-far-parte-del-nostro-club-di-talenti-e-diventare-in-soli-3-mesi-la-figura-c/148125187122798/"
           ><i class="fab fa-facebook-f"></i>
         </a>
       </div>
       <div id="calendar" class="icon">
-        <a href="https://www.calendario-365.it/calendario-2023.html"
+        <a
+          target="_blank"
+          href="https://www.calendario-365.it/calendario-2023.html"
           ><i class="far fa-calendar-alt"></i
         ></a>
       </div>
       <div id="scroll" class="icon">
-        <a href="#header"><i class="far fa-caret-square-up"></i></a>
+        <a href="#top"><i class="far fa-caret-square-up"></i></a>
       </div>
     </div>
   </body>
