--- a/compito-d3/index.html
+++ b/compito-d3/index.html
@@ -10,11 +10,11 @@
   <body>
     <header>
       <div id="nav">
+        <div class="nav-link">Our Honey</div>
+        <div class="nav-link">Trace Honey</div>
         <div id="first-link" class="nav-link">
           <img src="assets/imgs/logo.png" alt="logo" />shop
         </div>
-        <div class="nav-link">Our Honey</div>
-        <div class="nav-link">Trace Honey</div>
         <div class="nav-link">Facilities</div>
         <div class="nav-link">Contacts</div>
       </div>
@@ -22,52 +22,43 @@
 
     <main>
       <h1>Best Selling Products</h1>
-
-      <div class="card">
-        <img src="assets/imgs/honey.jpg" alt="img-card" />
-        <div class="description">
-          <p><b>100% Bio Honey</b> Italian,not treated</p>
-          <div class="price"><p>7$/kg</p></div>
+      <div class="cards">
+        <div class="card">
+          <img src="assets/imgs/honey.jpg" alt="img-card" />
+          <div class="description">
+            <p><b>100% Bio Honey</b> Italian,not treated</p>
+            <div class="price"><p>7$/kg</p></div>
+          </div>
+          <div class="btn">Add to cart</div>
         </div>
-        <div class="btn">Add to cart</div>
-      </div>
 
-      <div class="card">
-        <img src="assets/imgs/honey.jpg" alt="img-card" />
-        <div class="description">
-          <p><b>100% Bio Honey</b> Italian,not treated</p>
-          <div class="price"><p>7$/kg</p></div>
+        <div class="card">
+          <img src="assets/imgs/honey.jpg" alt="img-card" />
+          <div class="description">
+            <p><b>100% Bio Honey</b> Italian,not treated</p>
+            <div class="price"><p>7$/kg</p></div>
+          </div>
+          <div class="btn">Add to cart</div>
         </div>
-        <div class="btn">Add to cart</div>
-      </div>
 
-      <div class="card">
-        <img src="assets/imgs/honey.jpg" alt="img-card" />
-        <div class="description">
-          <p><b>100% Bio Honey</b> Italian,not treated</p>
-          <div class="price"><p>7$/kg</p></div>
+        <div class="card">
+          <img src="assets/imgs/honey.jpg" alt="img-card" />
+          <div class="description">
+            <p><b>100% Bio Honey</b> Italian,not treated</p>
+            <div class="price"><p>7$/kg</p></div>
+          </div>
+          <div class="btn">Add to cart</div>
         </div>
-        <div class="btn">Add to cart</div>
-      </div>
 
-      <div class="card">
-        <img src="assets/imgs/honey.jpg" alt="img-card" />
-        <div class="description">
-          <p><b>100% Bio Honey</b> Italian,not treated</p>
-          <div class="price"><p>7$/kg</p></div>
+        <div class="card">
+          <img src="assets/imgs/honey.jpg" alt="img-card" />
+          <div class="description">
+            <p><b>100% Bio Honey</b> Italian,not treated</p>
+            <div class="price"><p>7$/kg</p></div>
+          </div>
+          <div class="btn">Add to cart</div>
         </div>
-        <div class="btn">Add to cart</div>
       </div>
-
-      <div class="card">
-        <img src="assets/imgs/honey.jpg" alt="img-card" />
-        <div class="description">
-          <p><b>100% Bio Honey</b> Italian,not treated</p>
-          <div class="price"><p>7$/kg</p></div>
-        </div>
-        <div class="btn">Add to cart</div>
-      </div>
-
       <h2>Latest News</h2>
 
       <div class="box">
