--- a/compito-d4/start1/postit.html
+++ b/compito-d4/start1/postit.html
@@ -20,49 +20,49 @@
   <body>
     <ul>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #1</h2>
           <p>creare i postit</p>
         </a>
       </li>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #2</h2>
           <p>colorarli</p>
         </a>
       </li>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #3</h2>
           <p>affiancarli</p>
         </a>
       </li>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #4</h2>
           <p>spaziarli</p>
         </a>
       </li>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #5</h2>
           <p>ombreggiarli</p>
         </a>
       </li>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #6</h2>
           <p>ruotarli</p>
         </a>
       </li>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #7</h2>
           <p>animarli</p>
         </a>
       </li>
       <li>
-        <a href="#" contenteditable>
+        <a href="#">
           <h2>Title #8</h2>
           <p>testarli</p>
         </a>
